# pro-django

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
core/: manage.py
core/core/utils/: collections.py  misc.py  settings.py
core/project/: urls.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py  logging_conf.py
core/project/settings/templates/: settings.dev.py
docs/: doc.txt
local/: settings.dev.py
