[tool.poetry]
name = "pro-project"
version = "0.1.0"
description = ""
authors = ["cseshahriar <cse.shahriar.hosen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.7"
djangorestframework = "^3.15.2"
psycopg2 = "^2.9.10"
django-filter = "^25.1"
django-split-settings = "^1.3.2"
PyYAML = "^6.0.2"
flake8 = "^7.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^4.2.0"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
